# decodelbs_task_1

./: LICENSE  README.md
ur5e_simulation/: CMakeLists.txt  README.md  package.xml
ur5e_simulation/config/: controllers.yml  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
ur5e_simulation/docs/: Installation.md  MoveIt2.md  Project_Architecture.md  ROS2_Commands.md  Simulation.md
ur5e_simulation/launch/: display.launch.py  gazebo.launch.py  moveit.launch.py  spawn_robot.launch.py  ur5e_simulation.launch.py
ur5e_simulation/rviz/: ur5e.rviz
ur5e_simulation/scripts/: controller_test.py  pick_place_demo.py  spawn_robot.py
ur5e_simulation/urdf/: gazebo.xacro  materials.xacro  ros2_control.xacro  ur5e.urdf.xacro  ur5e_macro.xacro
ur5e_simulation/worlds/: empty.world  warehouse.world
