<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>ur5e_simulation</name>
  <version>1.0.0</version>

  <description>
    UR5e Robotic Arm Simulation using ROS2 Humble, Gazebo and MoveIt2.
  </description>

  <maintainer email="kunwar.banaras@gmail.com">
    Kunwar Singh
  </maintainer>

  <license>MIT</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- Robot Description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <!-- Gazebo -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>

  <!-- ros2_control -->
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>ros2_control</depend>

  <!-- MoveIt2 -->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
